name:                cxxdraft-htmlgen
version:             0
synopsis:            Converts C++ Standard draft documents from their LaTeX sources to HTML
license:             PublicDomain
license-file:        LICENSE
author:              Eelis
maintainer:          eelis@eelis.net
category:            Text
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable cxxdraft-htmlgen
  main-is:             genhtml.hs
  other-modules:       Load14882, Render, Util, SectionPages, Toc
  other-extensions:    OverloadedStrings, RecordWildCards, TupleSections, ViewPatterns
  build-depends: base >=4.6 && <4.10
               , HaTeX >=3.16 && <3.17
               , text >=1.2 && <1.3
               , process >=1.1 && <1.5
               , directory >=1.2 && <1.3
               , hashable >=1.2 && <1.3
               , containers >=0.5 && <0.6
               , mtl >=2.2 && <2.3
               , time >=1.4 && <1.7
               , regex-compat
               , temporary
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -fno-warn-tabs
